--- a/examples/index.html
+++ b/examples/index.html
@@ -21,13 +21,16 @@
 <div class="container">
   <div id="target"></div>
 </div>
-<div style="text-align: center">
-  <div id="sliderValue">0</div>
-  <input type="range" style="width: 100%;" step="0.1" value="0" max="8" min="0" id="changeSteps">
-</div>
-
 
 <div id="target2"></div>
+
+
+<hr>
+<div style="text-align: center">
+  <div id="sliderValue">0</div>
+  <label for="changeSteps">Progress slider group</label>
+  <input type="range" style="width: 100%;" step="0.1" value="0" max="8" min="0" id="changeSteps">
+</div>
 
 <div id="target3"></div>
 
@@ -35,7 +38,7 @@
 
 <div id="target5"></div>
 
-<div style="background: #f5dcee; border-top: 30px solid #f55a6d; #f55a6d;">
+<div style="background: #f5dcee;">
   <div id="target6"></div>
 </div>
 
@@ -62,17 +65,20 @@
     ]
   })
 
-  const steps = ['✌', '2', '3', '5', '6', '7', '8']
+  const steps = ['ヅ', '2', '3', '5', '6', '7', '8']
 
   const baz = stepsProgress({
     target: document.getElementById('target3'),
     circleRadius: 30,
-    textSizeRatio: 1.3,
-    textYPosition: 57,
+    strokeWidth: 2,
+    backgroundColor: '#f5ac97',
+    completeFill: '#f55c85',
     animationSpeed: 1000,
-    colorFg: '#48f583',
+    fontSize: 40,
+    textFill: 'white',
+    colorFg: '#f55c85',
     colorBg: '#f5ac97',
-    currentStep: 7,
+    currentStep: 0,
     steps: steps
   })
 
@@ -83,8 +89,8 @@
     textYPosition: 65,
     animationSpeed: 3000,
     colorFg: '#f5f36b',
-    colorBg: '#f5c4ee',
-    currentStep: 5,
+    colorBg: '#6ec7f5',
+    currentStep: 0,
     steps: steps
   })
 
@@ -101,7 +107,7 @@
     strokeWidth: 5,
     colorFg: '#22f5c9',
     colorBg: '#f5c4ee',
-    currentStep: 5,
+    currentStep: 0,
     steps: steps
   })
 
@@ -110,13 +116,14 @@
     circleRadius: 100,
     svgHeightRatio: 0.3,
     animationSpeed: 1000,
-    fontSize: 100,
+    fontSize: 120,
     strokeWidth: 30,
     colorFg: '#f55a6d',
     colorBg: '#dbc2d4',
     backgroundColor: '#f5dcee',
-    textFill: '#d1b8ca',
-    currentStep: 5,
+    textFill: '#a993a2',
+    activeTextFill: '#7d28f5',
+    currentStep: 0,
     steps: steps.concat(steps)
   })
 
