--- a/examples/index.html
+++ b/examples/index.html
@@ -46,14 +46,14 @@
 <script src="../build/svg-progress-steps.min.js"></script>
 
 <script>
-  const foo = stepsProgress({
+  var foo = stepsProgress({
     target: document.getElementById('target'),
     currentStep: 3,
     animationSpeed: 2000,
     steps: [ 'foo', 'bar', 'baz', ['boo', 'arse']]
   })
 
-  const bar = stepsProgress({
+  var bar = stepsProgress({
     target: document.getElementById('target2'),
     circleRadius: 120,
     strokeWidth: 20,
@@ -61,13 +61,13 @@
     currentStepCompleted: 0.2,
     fontSize: 40,
     steps: [
-      ['signup', 'progress']
+      ['signup', 'progress', 'complete']
     ]
   })
 
-  const steps = ['ヅ', '2', '3', '5', '6', '7', '8']
+  var steps = ['ヅ', '2', '3', '5', '6', '7', '8']
 
-  const baz = stepsProgress({
+  var baz = stepsProgress({
     target: document.getElementById('target3'),
     circleRadius: 30,
     strokeWidth: 2,
@@ -82,7 +82,7 @@
     steps: steps
   })
 
-  const bazzzz = stepsProgress({
+  var bazzzz = stepsProgress({
     target: document.getElementById('target4'),
     circleRadius: 60,
     textSizeRatio: 1.3,
@@ -94,7 +94,7 @@
     steps: steps
   })
 
-  const bazzzzing = stepsProgress({
+  var bazzzzing = stepsProgress({
     target: document.getElementById('target5'),
     circleRadius: 50,
     completeFill: '#dcffe2',
@@ -111,7 +111,7 @@
     steps: steps
   })
 
-  const bazzzzingTon = stepsProgress({
+  var bazzzzingTon = stepsProgress({
     target: document.getElementById('target6'),
     circleRadius: 100,
     svgHeightRatio: 0.3,
@@ -133,7 +133,7 @@
   updater.addEventListener('change' , function (e) {
     var n = e.target.value.toString().split('.')
     var fraction = n[1] ? n[1] / 10 : 0
-    updaterValue.innerHTML = `step ${n[0]} upto ${fraction}`
+    updaterValue.innerHTML = 'step ' + n[0] + ' upto ' + fraction
     bazzzz.updateProgress({
       currentStep: +n[0],
       currentStepCompleted: +fraction
