--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
 
 
 <hr>
-<div style="text-align: center">
+<div style="text-align: center;">
   <div id="sliderValue">0</div>
   <label for="changeSteps">Progress slider group</label>
   <input type="range" style="width: 100%;" step="0.1" value="0" max="8" min="0" id="changeSteps">
@@ -87,7 +87,7 @@
     circleRadius: 60,
     textSizeRatio: 1.3,
     textYPosition: 65,
-    animationSpeed: 3000,
+    animationSpeed: 750,
     colorFg: '#f5f36b',
     colorBg: '#6ec7f5',
     currentStep: 0,
@@ -103,7 +103,7 @@
     activeTextFill: '#22c99d',
     // svgHeightRatio: 6,
     // textYPosition: 90,
-    animationSpeed: 3000,
+    animationSpeed: 1000,
     strokeWidth: 5,
     colorFg: '#22f5c9',
     colorBg: '#f5c4ee',
@@ -130,40 +130,52 @@
 
   var updater = document.getElementById('changeSteps')
   var updaterValue = document.getElementById('sliderValue')
+  function doUpdate(step, fraction) {
+    bazzzz.updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+    bazzzzing.updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+    baz.updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+    bazzzz.updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+    var newSteps = steps.concat()
+    newSteps[+step] = (Math.round(+fraction * 100)) + '%'
+    bazzzz.updateStepsText(newSteps).updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+    bazzzzingTon.updateProgress({
+      currentStep: +step,
+      currentStepCompleted: +fraction
+    })
+  }
   updater.addEventListener('change' , function (e) {
     var n = e.target.value.toString().split('.')
     var fraction = n[1] ? n[1] / 10 : 0
     updaterValue.innerHTML = 'step ' + n[0] + ' upto ' + fraction
-    bazzzz.updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-    bazzzzing.updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-    baz.updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-    bazzzz.updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-    var newSteps = steps.concat()
-    newSteps[+n[0]] = (Math.round(+fraction * 100)) + '%'
-    bazzzz.updateStepsText(newSteps).updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-    bazzzzingTon.updateProgress({
-      currentStep: +n[0],
-      currentStepCompleted: +fraction
-    })
-
-
+    doUpdate(n[0], fraction)
   })
 
+  /*
+  var i = 0
+  setInterval(function () {
+    i++
+    if (i > 6) return
+    var x = i - 1
+    var f = x ? x / 10 : 0
+    f = i === 3 ? 0 : f
+    doUpdate(i, f)
+  }, 3000)
+  */
 
   console.log(foo)
 
