--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@
   <div class="col">
     <div id="target2"></div>
   </div>
-  <div class="col">
+  <div class="col-6">
     <div id="target22"></div>
   </div>
   <div class="col">
@@ -30,12 +30,12 @@
 </div>
 
 
-<!--hr>
+<hr>
 <div style="text-align: center;">
   <div id="sliderValue">0</div>
   <label for="changeSteps">Progress slider group</label>
   <input type="range" style="width: 100%;" step="0.1" value="0" max="6.9" min="0" id="changeSteps">
-</div-->
+</div>
 
 <div id="target3"></div>
 
@@ -56,7 +56,7 @@
     fontSize: 30,
     currentStep: 3,
     animationSpeed: 2000,
-    steps: [ 'foo', 'bar', 'baz', ['woop', 'woop']]
+    steps: ['foo', 'bar', 'baz', ['woop', 'woop']]
   })
 
   var bar = stepsProgress({
@@ -73,15 +73,16 @@
 
   var bar2 = stepsProgress({
     target: document.getElementById('target22'),
-    circleRadius: 120,
-    strokeWidth: 30,
+    circleRadius: 160,
+    strokeWidth: 40,
     currentStep: 0,
     currentStepCompleted: 0.6,
     fontSize: 100,
     textFill: '#f53266',
     colorFg: '#f53266',
     colorBg: '#f5e0bb',
-    steps: ['60%']
+    steps: ['60%'],
+    styleType: 'snake'
   })
 
   var bar23 = stepsProgress({
@@ -125,7 +126,8 @@
     colorBg: '#6ec7f5',
     activeTextFill: '#f5b254',
     currentStep: 0,
-    steps: steps
+    steps: steps,
+    styleType: 'snake'
   })
 
   var bazzzzing = stepsProgress({
@@ -147,18 +149,19 @@
 
   var bazzzzingTon = stepsProgress({
     target: document.getElementById('target6'),
-    circleRadius: 150,
+    circleRadius: 120,
     animationSpeed: 1000,
     fontSize: 120,
-    strokeWidth: 30,
-    colorFg: '#f55a6d',
-    colorBg: '#dbc2d4',
+    strokeWidth: 25,
+    colorFg: '#e5596c',
+    colorBg: '#ffa4b2',
     backgroundColor: '#f5dcee',
     textFill: '#a993a2',
-    activeTextFill: 'white',
-    activeFill: '#f50f65',
+    activeTextFill: '#e5596c',
+    activeFill: '#ddc5d6',
     currentStep: 0,
-    steps: steps
+    steps: steps,
+    styleType: 'snake'
   })
 
 
