updating example gif for snake stuff

--- a/examples/index.html
+++ b/examples/index.html
@@ -195,6 +195,7 @@
       currentStepCompleted: +fraction
     })
   }
+
   updater.addEventListener('change' , function (e) {
     var n = e.target.value.toString().split('.')
     var fraction = n[1] ? n[1] / 10 : 0
@@ -203,6 +204,7 @@
   })
 
   /*
+  for auto example
   var i = 0
   setInterval(function () {
     i++
@@ -214,6 +216,7 @@
     doUpdate(i, f)
   }, 1250)
   */
+
 
 </script>
 
